# mini-rayon

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
mini-rayon/: Cargo.toml
mini-rayon/src/: iter.rs  lib.rs  math.rs  plumbing.rs  prelude.rs
mini-rayon/src/containers/: vec.rs
mini-rayon/src/core/: counter.rs  job.rs  latch.rs  mod.rs  registry.rs  sleep.rs  unwind.rs  worker.rs
mini-rayon/src/functions/: for_each.rs  mod.rs  noop.rs
src/: bridge.rs  for_each.rs  iter.rs  lib.rs  plumbing.rs  vec.rs
src/containers/: vec.rs
src/core/: job.rs  join.rs  latch.rs  mod.rs  registry.rs  sleep.rs  unwind.rs  worker.rs
src/functions/: for_each.rs  mod.rs
src/thread/: job.rs  mod.rs  registry.rs  worker.rs
