[workspace.package]
name = "mini-rayon"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/lichuang/mini-rayon"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]
license = "Apache-2.0"
repository = "https://github.com/lichuang/mini-rayon"
readme = "README.md"
description = "A simplified implementation of the rayon project to illustrate the implementation principle."

[workspace]
members = [
    "mini-rayon",
    "example",
]